Revision history for Locale::Wolowitz

{{$NEXT}}

0.4       2013-11-08 16:14:24 Asia/Jerusalem
	- undef strings are returned as is from loc() (thanks isync)

0.3       2012-11-22 21:08:09 Asia/Jerusalem
	- Added the ability to load just on localization file
	- Added versions to prereqs
	- Added JSON recommendations to prereqs as JSON::Any doesn't require any JSON module
	- Improved documentation

0.2       2010-12-26 16:03:29 Asia/Jerusalem
	- Changed distribution name to Locale::Wolowitz
	- Fixed some documentation errors

0.1       2010-12-25 22:28:01 Asia/Jerusalem
	- Initial release