@@ -1,5 +1,5 @@
 NAME
-    Locale::Wolowitz - Dead simple localization for with JSON.
+    Locale::Wolowitz - Dead simple localization with JSON.
 
 SYNOPSIS
             # in ./i18n/locales.coll.json
@@ -25,6 +25,16 @@ SYNOPSIS
             print $w->loc('Welcome!', 'es'); # prints 'Bienvenido!'
 
             print $w->loc("I'm using %1", 'he', $w->loc('Linux', 'he')); # prints "אני משתמש בלינוקס"
+
+            # you can also directly load data (useful if data is not in files, but say in database)
+            $w->load_structure({
+                    hello => {
+                            he => 'שלום',
+                            fr => 'bonjour'
+                    }
+            });
+
+            print $w->loc('hello', 'he'); # prints "שלום"
 
 DESCRIPTION
     Locale::Wolowitz is a very simple text localization system. Yes, another
@@ -133,25 +143,59 @@ DESCRIPTION
                     "he": "כל הזכויות שמורות, 2010 עידו פרלמוטר"
             }
 
-CLASS METHODS
-  new( $path / $filename )
-    Creates a new instance of this module. Requires a path to a directory in
-    which JSON localization files exist, or a path to a specific
-    localization file. If you pass a directory, all JSON localization files
-    will be loaded and merged as described above. If you pass one file, only
-    that file will be loaded.
+CONSTRUCTOR
+  new( [ $path / $filename ] )
+    Creates a new instance of this module. A path to a directory in which
+    JSON localization files exist, or a path to a specific localization
+    file, *may* be supplied. If you pass a directory, all JSON localization
+    files in it will be loaded and merged as described above. If you pass
+    one file, only that file will be loaded.
 
 OBJECT METHODS
+  load_path( $path / $filename )
+    Receives a path to a directory in which JSON localization files exist,
+    or a path to a specific localization file, and loads (and merges) the
+    localization data from the file(s). If localization data was already
+    loaded previously, the structure will be merged, with the new data
+    taking precedence.
+
+    You can call this method and load_structure() as much as you want, the
+    data from each call will be merged with existing data.
+
+  load_structure( \%structure, [ $lang ] )
+    Receives a hash-ref of localization data similar to that in the JSON
+    files and loads it into the object (possibly merging with existing data,
+    if any). If $lang is supplied, a one-to-one structure will be assumed,
+    like so:
+
+            load_structure(
+                    { "hello" => "שלום", "world" => "עולם" },
+                    'he'
+            )
+
+    Or, if $lang is not provided, the structure must be the multiple
+    language structure, like so:
+
+            load_structure({
+                    "hello" => {
+                            "he" => "שלום",
+                            "fr" => "bonjour"
+                    },
+                    "world" => {
+                            "he" => "עולם",
+                            "fr" => "monde",
+                            "it" => "mondo"
+                    }
+            })
+
+    You can call this method and load_path() as much as you want, the data
+    from each call will be merged with existing data.
+
   loc( $msg, $lang, [@args] )
     Returns the string $msg, translated to the requested language (if such a
     translation exists, otherwise no traslation occurs). Any other
     parameters passed to the method (@args) are injected to the placeholders
     in the string (if present).
-
-INTERNAL METHODS
-  _load_locales( $path )
-    Loads all locale JSON files in the directory $path and returns them as a
-    hash-ref.
 
 DIAGNOSTICS
     The following exceptions are thrown by this module:
@@ -210,7 +254,7 @@ AUTHOR
     Ido Perlmuter <ido@ido50.net>
 
 LICENSE AND COPYRIGHT
-    Copyright (c) 2010-2012, Ido Perlmuter "ido@ido50.net".
+    Copyright (c) 2010-2014, Ido Perlmuter "ido@ido50.net".
 
     This module is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself, either version 5.8.1 or any later
