@@ -7,4 +7,3 @@ copyright_holder = Ido Perlmuter
 
 [Prereqs / RuntimeRecommends]
 JSON::XS = 2.3
-JSON = 2.50
