@@ -2,9 +2,10 @@
 
 use strict;
 use warnings;
+use utf8;
+
 use Test::More tests => 4;
 use Locale::Wolowitz;
-use utf8;
 
 my $w = Locale::Wolowitz->new('t/i18n/rev_en.json');
 ok($w, 'Got a proper Wolowitz object');
